# distributed-impl

./: resource-and-specs.md
frost-dkg/: Cargo.toml  README.md
frost-dkg/src/: errors.rs  main.rs
frost-dkg/src/common/: constants.rs  mod.rs  types.rs  utils.rs
frost-dkg/src/nodes/: client.rs  events.rs  first_round.rs  key_gen.rs  mod.rs  nodes.rs  second_round.rs
kv1/: Cargo.toml  README.md  build.rs
kv1/proto/: kv.proto
kv1/src/: client.rs  errors.rs  main.rs  server.rs
map-reduce/: Cargo.toml  README.md
map-reduce/map/: outmr-0-0  outmr-0-1  outmr-0-2
map-reduce/src/: main.rs  master.rs  types.rs  worker.rs
raft/: Cargo.toml  README.md  build.rs
raft/proto/: client_service.proto  internal_service.proto
raft/src/: client.rs  errors.rs  main.rs  server.rs
raft/src/nodes_services/: mod.rs  node_client_service.rs  node_internal_service.rs
