[package]
name = "frost-dkg"
version = "0.1.0"
edition = "2024"

[dependencies]
frost-ristretto255 = "2.2.0"
tokio = { version = "1", features = ["full"] }
libp2p = { version = "0.56.0", features = ["tokio", "cbor", "gossipsub", "mdns", "tcp", "yamux", "noise", "quic", "macros", "ping", "kad", "identify", "relay", "request-response"] }
bincode = "1.3.3"
tracing-subscriber = "0.3"
serde = {version = "1.0.204", features = ["derive"]}
frost-core = "1.0.0"
tracing = "0.1.40"
async-trait = "0.1"
futures = "0.3"
rand = "0.8"
sha2 = "0.10.9"
clap = { version = "4", features = ["derive"] }
colored = "3.0.0"
thiserror = "2.0.16"