[package]
name = "kv1"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the kv gRPC server
name = "kv-server"
path = "src/server.rs"

[[bin]] # Bin to run the kv gRPC client
name = "kv-client"
path = "src/client.rs"

[dependencies]
tonic = "*"
prost = "0.14"
tokio = { version = "1.0", features = ["full"] }

[build-dependencies]
tonic-build = "*"
