[package]
name = "map-reduce"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.46.1", features = ["full"] }
serde_json = "1.0"
serde = {version = "1.0.219", features = ["derive"]}
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
clap = { version = "4.5.41", features = ["derive"] }
rand = "0.9.1"